-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.0
-
None
-
N8 with 92_7952_201032 image (also happens on with wk28 image)
No SIM card
WLAN access point defined
-
1d77ce9a00b959befd56428152a52db16743db42, 6939815182b31ab865184e40991eb339ff21ba2d
Embedded QML demos qmltwitter and qmlflickr crash with KERN-EXEC 0 in Symbian^3 when connecting to internet. This happens when using WLAN without SIM card. This might be caused by accessing iCmManager from multiple threads (based on the panic being similar to the QTBUG-10296).
Call stack below:
[18975b50] = 00b63148 H1.. >>> PANIC KERN-EXEC 0 Here <<< [18975b64] = 804c5d79 y]L. [+ 0x0015] RSessionBase::SendSync(int, const TIpcArgs*) const [18975b74] = 804c8c41 A.L. [+ 0x0031] RSubSessionBase::DoSendReceive(int, const TIpcArgs*) const [18975b8c] = 805a2dcd .-Z. [+ 0x0007] RRepositorySubSession::SendReceive(int, const TIpcArgs&) const [18975b94] = 805a3813 .8Z. [+ 0x0015] CClientRepository::StartTransaction(CRepository::TTransactionMode) [18975ba4] = 7cdad141 A..| [+ 0x0245] QApplication::notify(QObject*, QEvent*) [18975bac] = 805a2d79 y-Z. [+ 0x0007] CRepository::StartTransaction(CRepository::TTransactionMode) [18975bb4] = 810faa27 '... [+ 0x0019] CommsDat::CMDBSessionImpl::MaybeOpenTransactionL() [18975bc4] = 810f8529 )... [+ 0x0017] CommsDat::CMDBSession::OpenTransactionL() [18975bcc] = 7e9d1417 ...~ [+ 0x0035] CCmTransactionHandler::OpenTransactionLC(int) [18975bf4] = 7e9c1669 i..~ [+ 0x0009] CCmManagerImpl::OpenTransactionLC(int) [18975bfc] = 7e9c296f o).~ [+ 0x000d] CCmManagerImpl::EasyWlanIdL() [18975c1c] = 804c5d83 .]L. [+ 0x001f] RSessionBase::SendSync(int, const TIpcArgs*) const [18975c3c] = 7e9c0e3f ?..~ [+ 0x0009] RCmManager::EasyWlanIdL() const [18975c44] = 7dac29e5 .).} [+ 0x000f] SymbianEngine::easyWlanTrueIapId(unsigned long&) [18975c4c] = 8076640d .dv. [+ 0x0025] RConnection::GetIntSetting(const TDesC16&, unsigned long&) [18975c7c] = 7dac2ff7 ./.} [+ 0x0025] QNetworkSessionPrivateImpl::activeConfiguration(unsigned long) const [18975cac] = 804d3b95 .;M. [+ 0x0015] RHeap::DoFree(RHeap::SCell*) [18975cdc] = 7dac4345 EC.} [+ 0x0035] QNetworkSessionPrivateImpl::RunL() [18975cec] = 7d39137f ..9} [+ 0x0045] QList<QPostEvent>::erase(QList<QPostEvent>::iterator, QList<QPostEvent>::iterator) [18975cf4] = 804cb147 G.L. [+ 0x0029] TDateTime::Set(int, TMonth, int, int, int, int, int) [18975cfc] = 804cb147 G.L. [+ 0x0029] TDateTime::Set(int, TMonth, int, int, int, int, int) [18975d14] = 804cb87b {.L. [+ 0x01fd] TTime::DateTime() const [18975d7c] = 804bb98f ..K. [+ 0x0053] CActiveScheduler::RunIfReady(int&, int) [18975da4] = 7d34a50b ..4} [+ 0x00fb] QEventDispatcherSymbian::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) [18975ddc] = 7d33c0cb ..3} [+ 0x0037] QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) [18975df4] = 7d33c1c7 ..3} [+ 0x008d] QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [18975e1c] = 7d353581 .55} [+ 0x0047] QThread::exec() [18975e44] = 7d17c74f O..} [+ 0x0071] QDeclarativePixmapReader::run() [18975e48] = 7d17c6df ...} [+ 0x0001] QDeclarativePixmapReader::run() [18975e64] = 7d353f4f O?5} [+ 0x0073] QThreadPrivate::start(void*) [18975e6c] = 7d353edd .>5} [+ 0x0001] QThreadPrivate::start(void*) [18975e78] = 7d353edd .>5} [+ 0x0001] QThreadPrivate::start(void*) [18975e88] = 7d353edd .>5} [+ 0x0001] QThreadPrivate::start(void*) [18975e8c] = 7ee84295 .B.~ [+ 0x30d2b9] .ARM.exidx$$Limit [18975eac] = 7ee84235 5B.~ [+ 0x30d259] .ARM.exidx$$Limit [18975eb4] = 005005e4 ..P. [+ 0x0044] CallThrdProcEntry [18975ebc] = 804adb5b [.J. [+ 0x0001] __ARM::default_unexpected_handler() [18975ec0] = 804ac849 I.J. [+ 0x0001] __default_terminate_handler() [18975ec4] = 804d3d00 .=M. [+ 0x008e] RHeap::Free(void*) [18975f00] = 804d3d9b .=M. [+ 0x0001] RHeap::ReAlloc(void*, int, int) [18975f04] = 804c2a27 '*L. [+ 0x001b] User::ReAlloc(void*, int, int) [18975f1c] = 804cf5c9 ..L. [+ 0x0041] RArrayBase::Insert(const void*, int) [18975f34] = 804d78df .xM. [+ 0x006d] TLocalThreadData::DllSetTls(int, int, void*) [18975f48] = 0050048c ..P. [+ 0x0000] globalDestructorFunc [18975f58] = 804af6a0 ..J. [+ 0x0008] vtable for XLeaveException [18975f5c] = 0050048c ..P. [+ 0x0000] globalDestructorFunc [18975f60] = 7ee84235 5B.~ [+ 0x30d259] .ARM.exidx$$Limit [18975f78] = 00500000 ..P. [+ 0x0000] _E32Startup [18975f7c] = 005004e0 ..P. [+ 0x003c] RunThread [18975f98] = 7ee84235 5B.~ [+ 0x30d259] .ARM.exidx$$Limit