Fix potential KERN-EXEC 0 on Symbian.

SymbianEngine::updateConfigurationsL cannot be called from a
non-main thread as it uses Symbian resources not shared between
threads.

Task-number: QTBUG-13064